Created utils and refactored pages within

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ APPIUM_SERVER=http://127.0.0.1:4723
 ANDROID_SDK_ROOT=/Users/adamrys/Library/Android/sdk;
 ANDROID_HOME=/Users/adamrys/Library/Android/sdk;
 PATH=$PATH:$ANDROID_SDK_ROOT/platform-tools
+TEST_USER=standard_user
+TEST_PASSWORD=secret_sauce
