Refactored PlatformConfig and DriverFactory classes

--- a/.env
+++ b/.env
@@ -1,9 +1,23 @@
-PLATFORM_NAME=Android
-DEVICE_NAME=emulator-5554
-APP_PATH=src/main/resources/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
+# Choice of platform: android or ios
+PLATFORM=android
+
+# === Android capabilities ===
+ANDROID_PLATFORM_NAME=Android
+ANDROID_DEVICE_NAME=emulator-5554
+ANDROID_APP_PATH=src/main/resources/Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
+
+# === iOS capabilities ===
+IOS_PLATFORM_NAME=iOS
+IOS_PLATFORM_VERSION=16.4
+IOS_DEVICE_NAME=iPhone 14
+IOS_AUTOMATION_NAME=XCUITest
+IOS_APP_PATH=src/main/resources/iOS.SauceLabs.Mobile.Sample.app.2.7.1.app
+IOS_NO_RESET=true
+IOS_NEW_COMMAND_TIMEOUT=300
+
+# Appium
 APPIUM_SERVER=http://127.0.0.1:4723
-ANDROID_SDK_ROOT=/Users/adamrys/Library/Android/sdk;
-ANDROID_HOME=/Users/adamrys/Library/Android/sdk;
-PATH=$PATH:$ANDROID_SDK_ROOT/platform-tools
+
+# Login test data
 TEST_USER=standard_user
 TEST_PASSWORD=secret_sauce
